# KhaiLabs

./: README.md
DevOps/Lab1/: .gitignore  Dockerfile  Jenkinsfile  Pipfile  README.md  app.py  docker-compose.yml  postman.json  prestart.sh  requirements.txt
DevOps/Lab1/app/: app.py
DevOps/Lab1/app/libs/: strings.py
DevOps/Lab1/app/migrations/versions/: 0850056e8e42_.py
DevOps/Lab1/app/models/: user.py
DevOps/Lab1/migrations/versions/: 0850056e8e42_.py  e3df0b708f7f_.py
DevOps/Lab1/models/: user.py
DevOps/Lab1/resources/: user.py
DevOps/Lab1/tests/: base_test.py
DevOps/Lab1/tests/system/models/: user_test.py
NoSQL/Mod2/: docker-compose.yml  mongodb.py  pyproject.toml
